<resources>

    <string name="mob_unit_id_tests" translatable="false">ca-app-pub-3940256099942544/6300978111</string>

    <string name="falha_acesso_servidor">Não foi possível conectar ao servidor.</string>
    <string name="detalhes">Detalhes</string>

    <string name="ponto_n_linha_n_">Ponto: %1$s    Linha: %2$s</string>
    <string name="ponto_n_">Ponto: %1$s</string>
    <string name="meno_minuto">Em menos de um minuto</string>
    <string name="mais_hora">%1$d h %2$d min</string>

    <plurals name="minutos">
        <item quantity="one">%d minuto</item>
        <item quantity="other">%d minutos</item>
    </plurals>
    <string name="action_settings">Settings</string>
    <string name="title_activity_linha_detalhe">Settings</string>
    <string name="adicionar">Adicionar</string>
    <string name="informacoes">Informações</string>
    <string name="favoritos">Favoritos</string>
    <string name="twitter">Notícias</string>
    <string name="ponto_adicionado">Ponto adicionado aos favoritos</string>
    <string name="ponto_removido">Ponto removido dos favoritos</string>
    <string name="linha_adicionado">Linha adicionada aos favoritos</string>
    <string name="linha_removido">Linha removida dos favoritos</string>
    <string name="desfazer">Desfazer</string>
    <string name="favoritos_empty_subtitle">Encontre mais facilmente seus pontos e ônibus mais usados. Marque-os como favorito e eles
        aparecerão aqui.
    </string>
    <string name="favoritos_empty_title">Não há pontos favoritos</string>

    <string name="ponto_empty_subtitle">Isso pode ter ocorrido por uma falha de conexão com o servidor da Prefeitura de Vitória.
        Verifique sua conexão com a internet e tente novamente.
    </string>
    <string name="ponto_empty_title">Não há ônibus nesse ponto</string>
    <string name="linhas_favoritas">LINHAS FAVORITAS</string>
    <string name="linhas">LINHAS</string>
    <string name="location_not_found">Localização não encontrada</string>
    <string name="explicacao_gps_sem_permissao">Habilite acesso ao GPS nas configurações
        para ver os pontos mais próximos.
    </string>
    <string name="description_button_info">Exibir informações sobre o aplicativo</string>
    <string name="description_button_mapa">Exibe o mapa com os pontos</string>
    <string name="description_button_favoritos">Exibe os pontos marcados como favorito</string>
    <string name="rating_message">Que tal aproveitar enquanto seu ônibus não chega e avalia o aplicativo na Play Store?</string>
    <string name="rating_positive">Sim!!!</string>
    <string name="rating_neutral">Mais tarde</string>
    <string name="rating_negative">Nem pensar</string>
    <string name="imagem_ponto">Foto do ponto</string>
    <string name="legenda">Legenda</string>
    <string name="example_legenda">12:00 - 10 minutos</string>
    <string name="legenda_bom">Última localização transmitida há menos de 7 minutos</string>
    <string name="legenda_medio">Última localização transmitida há menos de 22 minutos</string>
    <string name="legenda_ruim">Última localização transmitida há mais de 22 minutos</string>
    <string name="entendi">Entendi</string>
    <string name="notificacao_habilitada">Notificações habilitadas</string>
    <string name="notificacao_desabilitada">Notificações desabilitadas</string>
    <string name="proximo_onibus__">Próximos ônibus em %s</string>
    <string name="dialog_proximidade_titulo">Notificação por proximidade</string>
    <string name="dialog_proximidade_texto">Você receberá uma notificação com os próximos ônibus ao se aproximar de um ponto favorito
        habilitado
    </string>
    <string name="descricao_imagem_dialog_proximidade">Exemplo da notificação que será exibida</string>
    <string name="onibus_">Ônibus %s</string>
    <string name="preco_passagem">Preço passagem</string>
    <string name="troco_para_50">Troco para 50,00:</string>
    <string name="troco_para_20">Troco para 20,00:</string>
    <string name="troco_para_10">Troco para 10,00:</string>
    <string name="troco_para_5">Troco para 5,00:</string>
    <string name="valor_passagem">Valor passagem:</string>
    <string name="ultimo_reajuste__">Último reajustes: %s</string>

    <string name="titulo_renomear">Renomear ponto</string>
    <string name="renomear">Renomear</string>
    <string name="salvar">Salvar</string>
    <string name="apelido">Apelido</string>

    <string name="titulo_sobre">Sobre</string>
    <string name="avaliar">Avaliar</string>

    <string name="reiniciar_pontos">Reiniciar pontos</string>
    <string name="reiniciar_pontos_help">A posição e descrição de cada ponto é armazenada localmente. Caso a prefeitura inclua novos,
        remova ou mude os pontos de lugar, é necessário atualizar os dados armazenados
    </string>

    <string name="origem__">Origem: %s</string>
    <string name="destino__">Destino: %s</string>
    <string name="trecho">Trecho</string>
    <string name="origem_">Origem:</string>
    <string name="destino_">Destino:</string>
    <string name="cancelar">Cancelar</string>
    <string name="selecione_ponto_destino">Selecione no mapa o ponto de destino</string>
    <string name="erro_requisicao">Não foi possível concluir a requisição. Tente novamente mais tarde.</string>
    <string name="channel_name">Todas as notificações</string>

</resources>
