<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:minWidth="1000dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_huge"
        android:background="@android:color/white"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_default">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/badge_ok"
                android:paddingLeft="@dimen/padding_mini"
                android:paddingRight="@dimen/padding_mini"
                android:text="@string/example_legenda"
                android:textColor="@android:color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_default"
                android:layout_marginTop="@dimen/padding_mini"
                android:text="@string/legenda_bom"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_default"
                android:background="@drawable/badge_medio"
                android:paddingLeft="@dimen/padding_mini"
                android:paddingRight="@dimen/padding_mini"
                android:text="@string/example_legenda"
                android:textColor="@android:color/white"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_default"
                android:layout_marginTop="@dimen/padding_mini"
                android:text="@string/legenda_medio"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_default"
                android:background="@drawable/badge_ruim"
                android:paddingLeft="@dimen/padding_mini"
                android:paddingRight="@dimen/padding_mini"
                android:text="@string/example_legenda"
                android:textColor="@android:color/white"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_default"
                android:layout_marginTop="@dimen/padding_mini"
                android:text="@string/legenda_ruim"/>
        </LinearLayout>
        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_principal"
            android:text="@string/entendi"
            android:textColor="@android:color/white"/>
    </LinearLayout>
</ScrollView>