<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_huge"
        android:background="@android:color/white"
        android:minWidth="1000dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_default">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/valor_passagem"/>
                <TextView
                    android:id="@+id/textview_passagem"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="R$ 3,20"
                />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_mini"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/troco_para_5"/>
                <TextView
                    android:id="@+id/textview_troco_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="R$1,80"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_mini"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/troco_para_10"/>
                <TextView
                    android:id="@+id/textview_troco_10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="R$6,80"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_mini"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/troco_para_20"/>
                <TextView
                    android:id="@+id/textview_troco_20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="R$16,80"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_mini"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/troco_para_50"/>
                <TextView
                    android:id="@+id/textview_troco_50"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="R$46,80"/>
            </LinearLayout>
            <TextView
                android:visibility="invisible"
                tools:visibility="visible"
                android:id="@+id/textview_data_reajuste"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_mini"
                tools:text="@string/ultimo_reajuste__"/>

        </LinearLayout>
        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_principal"
            android:text="@string/entendi"
            android:textColor="@android:color/white"/>
    </LinearLayout>
</FrameLayout>