<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_huge"
        android:background="@android:color/white"
        android:minWidth="1000dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_default">

            <TextView
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titulo_renomear"/>

            <android.support.design.widget.TextInputLayout
                android:layout_marginTop="@dimen/padding_default"
                android:layout_marginBottom="@dimen/padding_default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edittext"
                    android:maxLines="1"
                    android:imeOptions="actionDone"
                    android:inputType="textCapSentences"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/apelido"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_principal"
            android:text="@string/salvar"
            android:textColor="@android:color/white"/>
    </LinearLayout>
</FrameLayout>